--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/GiangVien/Index.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/GiangVien/Index.cshtml
@@ -1,5 +1,21 @@
-﻿@{
+﻿@using QL_TrungTamAnhNgu.Models;
+
+@{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_LayoutGiangVien.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container mt-4">
+    @if (TempData["ThongBao"] != null)
+    {
+        <div class="alert alert-info">@TempData["ThongBao"]</div>
+    }
+
+    <h2>
+        Xin chào bạn, @{
+            GiangVien ng = Session["user"] as GiangVien;
+            <span>@ng.HoTen</span>
+        }
+    </h2>
+    
+</div>
