--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DangNhap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DangNhap.cshtml
@@ -35,8 +35,8 @@
         <div class="h-custom shadow" style="max-width: 900px; border: 1px solid #dadada; width: 100%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) ;background-color: #f2f2f2">
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-xl-6">
-                    <img src="~/Content/HinhAnh/GiaoDien/DangNhap.png"
-                         class="img-fluid" alt="Sample image">
+                    <img src="~/Content/HinhAnh/GiaoDien/yola-english-high-resolution-logo.png"
+                         class="img-fluid" alt="Sample image" style="object-fit: cover; height: 400px;">
                 </div>
                 <div class="col-xl-6">
                     <div class="d-flex align-items-center justify-content-center flex-column" style="height: 100% ;padding: 0 32px;">
