--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
@@ -53,12 +53,12 @@
                         <img src="~/Content/HinhAnh/GiaoDien/iconStudent.png" alt="icon Giảng viên" style="width: 60px; height: 60px; opacity: 0.5" />
                     </div>
                 </div>
-                <div class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #3a86ff; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;">
+                <a href="/QuanTriVien/HocVien" class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #3a86ff; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;">
                     <span style="color: white; font-size: 15px;">Xem thêm</span>
                     <div class="d-flex justify-content-center align-items-center" style="width: 15px; height: 15px; background-color: white; border-radius: 999px;">
                         <img src="~/Content/HinhAnh/GiaoDien/right-arrow.png" alt="Alternate Text" style="width: 8px; height: 8px; opacity: 0.8 " />
                     </div>
-                </div>
+                </a>
             </div>
             <div style="flex: 1;">
                 <div class="p-3 d-flex justify-content-between" style="background-color: #34a0a4; border-top-left-radius: 5px; border-top-right-radius: 5px;">
@@ -74,12 +74,12 @@
                         <img src="~/Content/HinhAnh/GiaoDien/iconTeacher.png" alt="icon Giảng viên" style="width: 60px; height: 60px; opacity: 0.5" />
                     </div>
                 </div>
-                <div class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #34a0a4; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;">
+                <a href="/QuanTriVien/GiangVien" class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #34a0a4; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;">
                     <span style="color: white; font-size: 15px;">Xem thêm</span>
                     <div class="d-flex justify-content-center align-items-center" style="width: 15px; height: 15px; background-color: white; border-radius: 999px;">
                         <img src="~/Content/HinhAnh/GiaoDien/right-arrow.png" alt="Alternate Text" style="width: 8px; height: 8px; opacity: 0.8" />
                     </div>
-                </div>
+                </a>
             </div>
             <div style="flex: 1;">
                 <div class="p-3 d-flex justify-content-between" style="background-color: #d62828; border-top-left-radius: 5px; border-top-right-radius: 5px;">
@@ -95,12 +95,12 @@
                         <img src="~/Content/HinhAnh/GiaoDien/iconCourse.png" alt="icon Giảng viên" style="width: 60px; height: 60px; opacity: 0.5" />
                     </div>
                 </div>
-                <div class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #d62828; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; ">
+                <a href="/QuanTriVien/DanhSachKhoaHoc" class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #d62828; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; ">
                     <span style="color: white; font-size: 15px;">Xem thêm</span>
                     <div class="d-flex justify-content-center align-items-center" style="width: 15px; height: 15px; background-color: white; border-radius: 999px;">
                         <img src="~/Content/HinhAnh/GiaoDien/right-arrow.png" alt="Alternate Text" style="width: 8px; height: 8px; opacity: 0.8" />
                     </div>
-                </div>
+                </a>
             </div>
             <div style="flex: 1;">
                 <div class="p-3 d-flex justify-content-between" style="background-color: #ffbe0b; border-top-left-radius: 5px; border-top-right-radius: 5px;">
