--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutQuanTriVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutQuanTriVien.cshtml
@@ -76,7 +76,7 @@
                                 </svg>
                                 <span style="color: black; font-size: 15px;">Danh sách khóa học</span>
                             </a>
-                            <a href="/QuanTriVien/TaoKhoaHoc" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/ThemKhoaHoc" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
@@ -134,7 +134,7 @@
                             </div>
                         </a>
                         <div id="subMenu3" class="subMenu" style="margin-left: 35px;">
-                            <a href="/QuanTriVien/KhoaHoc" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/DanhSachPhongHoc" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
@@ -234,7 +234,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
-                                <span style="color: black; font-size: 15px;">Danh sách Quản trị</span>
+                                <span style="color: black; font-size: 15px;">Danh sách Quản trị viên</span>
                             </a>
                             <a href="/QuanTriVien/GiangVien" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
