--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
@@ -10,7 +10,7 @@
     <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
         <div style="display: flex; align-items: center; column-gap: 8px;">
             <i class="fa-solid fa-bars" style="color: black; font-size: 20px;"></i>
-            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý người dùng</h2>
+            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý Trung tâm Anh ngữ Yola</h2>
         </div>
         <div style="position: relative">
             <button onclick="handleClickUser(event)" style="display: flex; align-items: center; column-gap: 4px; color: #000">
@@ -43,62 +43,76 @@
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin khóa học</h1>
-            <button class="btn btn-danger">
+            <button type="button" class="btn btn-danger" id="btnXoaKhoaHoc" data-makh="@Model.MaKhoaHoc">
                 Xóa khóa học
             </button>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm4" action="/QuanTriVien/TaoKhoaHoc" method="post">
+            <form class="myForm" action="/QuanTriVien/ChiTietKhoaHoc" method="post">
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenLoai">Tên loại: </label>
-                            @Html.TextBoxFor(model => model.TenKhoaHoc, new { @readonly = "readonly", @id = "TenLoai", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaKhoaHoc">Mã khóa học: </label>
+                            @Html.TextBoxFor(model => model.MaKhoaHoc, new { @readonly = "readonly", @id = "MaKhoaHoc", @class = "form-control mt-2" })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
                         </div>
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MoTa">Mô tả: </label>
-                            @Html.TextBoxFor(model => model.MoTa, new { @readonly = "readonly", @id = "MoTa", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
-                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenKhoaHoc">Tên khóa học: </label>
+                            @Html.TextBoxFor(model => model.TenKhoaHoc, new { @readonly = "readonly", @id = "TenKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
+                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
                         </div>
+                    </div>
+                    <div style="width: 100%">
+                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MoTa">Mô tả: </label>
+                        @Html.TextBoxFor(model => model.MoTa, new { @readonly = "readonly", @id = "MoTa", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
+                        <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                     </div>
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="HocPhi">Học phí: </label>
-                            @Html.TextBoxFor(model => model.HocPhi, new {  @readonly = "readonly", @id = "HocPhi", @class = "form-control mt-2", placeholder = "Nhập học phí" }) 
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="HocPhi">Học phí: (VNĐ)</label>
+                            @Html.TextBoxFor(model => model.HocPhi, new { @readonly = "readonly", @id = "HocPhi", @class = "form-control mt-2", placeholder = "Nhập học phí" })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
                         </div>
                         <div style="width: 100%">
                             <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NgayTao">Ngày tạo: </label>
-                            @Html.TextBoxFor(model => model.NgayTao, new { @readonly = "readonly", @id = "NgayTao", @class = "form-control mt-2"})
+                            @Html.TextBoxFor(model => model.NgayTao, new
+                              {
+                                  @readonly = "readonly",
+                                  @type = "date",
+                                  @id = "NgayTao",
+                                  @class = "form-control mt-2",
+                                  Value = Model.NgayTao.HasValue ? Model.NgayTao.Value.ToString("yyyy-MM-dd") : null
+                              })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                     </div>
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="HocPhi">Trạng thái: </label>
-                            @Html.TextBoxFor(model => model.TrangThai, new { @readonly = "readonly", @id = "HocPhi", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
-                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
-                        </div>
-                        <div style="width: 100%">
                             <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NguoiTao">Người tạo: </label>
-                            @Html.TextBoxFor(model => model.NguoiTao, new { @readonly = "readonly", @id = "NguoiTao", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
+                            @Html.TextBoxFor(model => model.QuanTriVien.HoTen, new { @readonly = "readonly", @id = "NguoiTao", @class = "form-control mt-2" })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NguoiTao">Cấp độ: </label>
-                            @Html.TextBoxFor(model => model.CapDo, new { @readonly = "readonly", @id = "CapDo", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="CapDo">Cấp độ: </label>
+                            @Html.TextBoxFor(model => model.CapDo, new { @readonly = "readonly", @id = "CapDo", @class = "form-control mt-2", placeholder = "Nhập cấp độ" })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-center flex-column">
-                            <span style="font-size: 15px; color: #374151; font-weight: 500; display: block; margin-top: 10px; margin-bottom: 5px;">Ảnh bìa khóa học</span>
-                            <img id="avatarPreview" src="~/Content/HinhAnh/KhoaHoc/@Model.AnhBia" alt="avatar preview" style="width: 350px; object-fit: cover; height: 150px;" />
-                            @Html.TextBoxFor(model => model.AnhBia, new { @id = "Avatar", @value = @Model.AnhBia, @class = "mt-2", @style = "display: none;", @type = "file", @accept = "image/*" })
-                            <label for="Avatar" id="label" class="custom-file-upload mt-2" style="cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
-                                Chọn tập tin
-                            </label>
-                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errAvatar"></span>
+                    <div style="width: 100%">
+                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TrangThai_1">Trạng thái:</label>
+                            <select disabled id="TrangThai_1" name="TrangThai" class="form-control mt-2">
+                                <option value="Đang hoạt động" @(Model.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
+                                <option value="Đã khóa" @(Model.TrangThai == "Đã khóa" ? "selected" : "")>Đã khóa</option>
+                            </select>
+                    </div>
+                    <div class="mt-3 d-flex justify-content-center flex-column">
+                        <span style="font-size: 15px; color: #374151; font-weight: 500; display: block; margin-top: 10px; margin-bottom: 5px;">Ảnh bìa khóa học</span>
+                        <img id="avatarPreview" src="~/Content/HinhAnh/KhoaHoc/@Model.AnhBia" alt="avatar preview" style="width: 450px; object-fit: cover; height: 250px;" />
+                        @Html.TextBoxFor(model => model.AnhBia, new { @id = "Avatar", @value = @Model.AnhBia, @class = "mt-2", @style = "display: none;", @type = "file", @accept = "image/*" })
+                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="pointer-events: none;cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
+                            Chọn tập tin
+                        </label>
+                        <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errAvatar"></span>
                     </div>
                 </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
@@ -108,10 +122,24 @@
                 </div>
             </form>
         </div>
-        <h1 style="font-size: 18px; font-weight: 600; color: #000; margin-top: 20px;">Các Khóa học bạn có thể tham khảo</h1>
+        <h1 style="font-size: 18px; font-weight: 600; color: #000; margin-top: 20px;">Các khóa học bạn có thể tham khảo</h1>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-           @Html.Action("DanhSachKhoaHocThamKhao")
+            @Html.Action("DanhSachKhoaHocThamKhao")
         </div>
     </div>
 </div>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const btnXoaKhoaHoc = document.getElementById('btnXoaKhoaHoc');
+
+        btnXoaKhoaHoc.addEventListener('click', function () {
+            const confirmDelete = confirm('Bạn có chắc chắn muốn xóa khóa học này không?');
+
+            if (confirmDelete) {
+                // Gửi yêu cầu xóa đến server
+                window.location.href = '/QuanTriVien/XoaKhoaHoc?maKH=@Model.MaKhoaHoc';
+            }
+        });
+    });
+</script>
