--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
@@ -47,21 +47,12 @@
                 Thêm phòng học
             </a>
         </div>
-        <div class="d-flex align-items-center justify-content-between mt-2">
-            <form method="get" action="/QuanTriVien/TimKiemPhongHoc" class="input-group" style="width: 75%; position: relative;">
+            <form method="get" action="/QuanTriVien/TimKiemPhongHoc" class="mt-2 input-group" style="width: 75%; position: relative;">
                 <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên phòng...">
                 <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
                     <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
-
-            <select style="width: 20%; padding: 8px; border-radius: 5px" class="form-control">
-                <option value="" disabled selected hidden>Lọc vị trí</option>
-                <option value="C1">Tầng 1</option>
-                <option value="C1">Tầng 2</option>
-                <option value="C2">Tầng 3</option>
-            </select>
-        </div>
 
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 20px; padding: 16px; border: 1px solid #dadada; border-radius: 5px;">
             <div style="display:flex; border-bottom: 1px solid #dadada">
