--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
@@ -43,9 +43,12 @@
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin khóa học</h1>
-            <button type="button" class="btn btn-danger" id="btnXoaKhoaHoc" data-makh="@Model.MaKhoaHoc">
-                Xóa khóa học
-            </button>
+            <div>
+                <a href="/QuanTriVien/DanhSachLopHoc?makh=@Model.MaKhoaHoc" class="btn btn-primary">Xem danh sách lớp</a>
+                <button type="button" class="btn btn-danger" id="btnXoaKhoaHoc" data-makh="@Model.MaKhoaHoc">
+                    Xóa khóa học
+                </button>
+            </div>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <form class="myForm" action="/QuanTriVien/ChiTietKhoaHoc" method="post">
