--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
@@ -1,7 +1,7 @@
-﻿@model QL_TrungTamAnhNgu.Models.KhoaHocPagedList
-@using QL_TrungTamAnhNgu.Models;
+﻿@model List<QL_TrungTamAnhNgu.Models.LopHoc>
+@using QL_TrungTamAnhNgu.Models
 @{
-    ViewBag.Title = "DanhSachKhoaHoc";
+    ViewBag.Title = "DanhSachLopHoc";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
@@ -35,67 +35,32 @@
         <div class="d-flex gap-2 mt-2">
             <i style="color: #343a40" class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #343a40">Danh sách khóa học</span>
+            <span style="color: #343a40">Danh sách lớp học</span>
         </div>
-        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách khóa học</h1>
-        <div class="mt-3">
-            <form method="get" action="/QuanTriVien/TimKiemKhoaHoc" class="input-group" style="width: 75%; position: relative;">
-                <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên khóa học...">
-                <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
-                    <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
-                </button>
-            </form>
-        </div>
-
+        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách lớp học của khóa học</h1>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <div class="row g-4">
-                @foreach (var item in Model.DsKhoaHoc)
+                @foreach (var item in Model)
                 {
                     <div class="col-3" style="border-radius: 10px;">
-                        <img src="~/Content/HinhAnh/KhoaHoc/@item.AnhBia" alt="@item.TenKhoaHoc" style="display: block ; width: 100%; height: 150px; border-top-left-radius: 5px; border-top-right-radius: 5px; " />
+                        <img src="~/Content/HinhAnh/KhoaHoc/@item.KhoaHoc.AnhBia" alt="@item.TenLop" style="display: block ; width: 100%; height: 150px; border-top-left-radius: 5px; border-top-right-radius: 5px; " />
                         <div style="padding: 8px 12px 0; height: 170px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; border: 1px solid #dadada; background-color: #fff;">
-                            <span style="font-size: 16px; font-weight: 500;">@item.TenKhoaHoc</span>
+                            <span style="font-size: 16px; font-weight: 500;">@item.TenLop</span>
                             @*<span style="font-size: 14px; display: block; margin-top: 15px; color: #7f7f7f; ">Giảng viên: @item.GiangVien.HoTen</span>*@
                             <span style="font-size: 14px; display: block; margin: 20px 0;">
                                 Trạng thái:
                                 <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">@item.TrangThai</span>
                                 <span style="font-size: 15px; display: block;  margin-top: 15px; font-weight: 500; color: #ff0000; ">
-                                    Giá: @String.Format("{0:N0}", item.HocPhi) đ
+                                    Người dạy: @String.Format("{0:N0}", item.GiangVien.HoTen) 
                                 </span>
                             </span>
                             <div class="d-flex justify-content-end">
-                                <a href="/QuanTriVien/ChiTietKhoaHoc?makh=@item.MaKhoaHoc" class="btn btn-primary">Chi tiết</a>
+                                <a href="/QuanTriVien/ChiTietLopHoc?malop=@item.MaLop" class="btn btn-primary">Chi tiết</a>
                             </div>
                         </div>
                     </div>
                 }
             </div>
         </div>
-        <div class="mt-4 d-flex justify-content-center align-items-center gap-2">
-            <a href="@Url.Action("DanhSachKhoaHoc", new { page = Model.CurrentPage - 1 })"
-               class="btnNextPage @(Model.CurrentPage == 1 ? "disabled" : "")"
-               @(Model.CurrentPage == 1 ? "aria-disabled=\"true\"" : "")>
-                Trước
-            </a>
-            <div>
-                @for (int i = 1; i <= Model.TotalPages; i++)
-                {
-                    if (i == Model.CurrentPage)
-                    {
-                        <span class="btnPageItem Active">@i</span> <!-- Trang hiện tại -->
-                    }
-                    else
-                    {
-                        <a class="btnPageItem" href="@Url.Action("DanhSachKhoaHoc", new { page = i })">@i</a>
-                    }
-                }
-            </div>
-            <a href="@Url.Action("DanhSachKhoaHoc", new { page = Model.CurrentPage + 1 })"
-               class="btnNextPage @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")"
-               @(Model.CurrentPage == Model.TotalPages ? "aria-disabled=\"true\"" : "")>
-                Sau
-            </a>
-        </div>
     </div>
 </div>
-
