--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemGiangVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemGiangVien.cshtml
@@ -50,12 +50,7 @@
                         <div class="d-flex justify-content-between gap-4">
                             <div style="width: 100%">
                                 <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaQTV">Mã giảng viên: </label>
-                                @Html.TextBoxFor(model => model.MaGiangVien, new { @id = "MaQTV", @class = "form-control mt-2", placeholder = "Nhập mã giảng viên" })
-                                <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
-                            </div>
-                            <div style="width: 100%">
-                                <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaNguoiDung">Mã người dùng: </label>
-                                @Html.TextBoxFor(model => model.NguoiDung.MaNguoiDung, new { @id = "MaNguoiDung", @class = "form-control mt-2", placeholder = "Nhập mã người dùng" })
+                                @Html.TextBoxFor(model => model.NguoiDung.MaNguoiDung, new { @id = "MaQTV", @class = "form-control mt-2", placeholder = "Nhập mã giảng viên" })
                                 <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
                             </div>
                         </div>
