--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemHocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemHocVien.cshtml
@@ -51,12 +51,7 @@
                         <div class="d-flex justify-content-between gap-4">
                             <div style="width: 100%">
                                 <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaQTV">Mã học viên: </label>
-                                @Html.TextBoxFor(model => model.MaHocVien, new { @id = "MaQTV", @class = "form-control mt-2", placeholder = "Nhập mã học viên" })
-                                <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
-                            </div>
-                            <div style="width: 100%">
-                                <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaNguoiDung">Mã người dùng: </label>
-                                @Html.TextBoxFor(model => model.NguoiDung.MaNguoiDung, new { @id = "MaNguoiDung", @class = "form-control mt-2", placeholder = "Nhập mã người dùng" })
+                                @Html.TextBoxFor(model => model.NguoiDung.MaNguoiDung, new { @id = "MaQTV", @class = "form-control mt-2", placeholder = "Nhập mã học viên" })
                                 <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
                             </div>
                         </div>
@@ -127,7 +122,7 @@
                         <div class="d-flex justify-content-between gap-4">
                             <div style="width: 100%">
                                 <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MucLuong">Mục tiêu học tập</label>
-                                @Html.TextBoxFor(model => model.MucTieuHocTap, new { @id = "MucLuong", @class = "form-control mt-2", placeholder = "Nhập mức lương" })
+                                @Html.TextBoxFor(model => model.MucTieuHocTap, new { @id = "MucLuong", @class = "form-control mt-2", placeholder = "Nhập mục tiêu học tập" })
                                 <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                             </div>
                             <div style="width: 100%">
