--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
@@ -102,10 +102,10 @@
                         </div>
                     </div>
                     <div style="width: 100%">
-                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TrangThai_1">Trạng thái:</label>
-                            <select disabled id="TrangThai_1" name="TrangThai" class="form-control mt-2">
+                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TrangThai">Trạng thái:</label>
+                            <select disabled id="TrangThai" name="TrangThai" class="form-control mt-2">
                                 <option value="Đang hoạt động" @(Model.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
-                                <option value="Đã khóa" @(Model.TrangThai == "Đã khóa" ? "selected" : "")>Đã khóa</option>
+                                <option value="Tạm ngưng" @(Model.TrangThai == "Tạm ngưng" ? "selected" : "")>Đã khóa</option>
                             </select>
                     </div>
                     <div class="mt-3 d-flex justify-content-center flex-column">
@@ -119,7 +119,6 @@
                     </div>
                 </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
-                    <button id="btnHuy" type="button" disabled class="btn btn-danger">Hủy</button>
                     <button id="btnSua" type="button" class="btn btn-primary">Sửa</button>
                     <button id="btnLuu" type="submit" disabled class="btn btn-success">Lưu</button>
                 </div>
