--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietKhoaHoc.cshtml
@@ -103,10 +103,10 @@
                     </div>
                     <div style="width: 100%">
                         <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TrangThai">Trạng thái:</label>
-                            <select disabled id="TrangThai" name="TrangThai" class="form-control mt-2">
-                                <option value="Đang hoạt động" @(Model.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
-                                <option value="Tạm ngưng" @(Model.TrangThai == "Tạm ngưng" ? "selected" : "")>Đã khóa</option>
-                            </select>
+                        <select disabled id="TrangThai" name="TrangThai" class="form-control mt-2">
+                            <option value="Đang hoạt động" @(Model.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
+                            <option value="Tạm ngưng" @(Model.TrangThai == "Tạm ngưng" ? "selected" : "")>Tạm ngưng</option>
+                        </select>
                     </div>
                     <div class="mt-3 d-flex justify-content-center flex-column">
                         <span style="font-size: 15px; color: #374151; font-weight: 500; display: block; margin-top: 10px; margin-bottom: 5px;">Ảnh bìa khóa học</span>
