--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
@@ -55,10 +55,20 @@
                         <img src="~/Content/HinhAnh/KhoaHoc/@item.AnhBia" alt="@item.TenKhoaHoc" style="display: block ; width: 100%; height: 150px; border-top-left-radius: 5px; border-top-right-radius: 5px; " />
                         <div style="padding: 8px 12px 0; height: 170px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; border: 1px solid #dadada; background-color: #fff;">
                             <span style="font-size: 16px; font-weight: 500;">@item.TenKhoaHoc</span>
-                            @*<span style="font-size: 14px; display: block; margin-top: 15px; color: #7f7f7f; ">Giảng viên: @item.GiangVien.HoTen</span>*@
                             <span style="font-size: 14px; display: block; margin: 20px 0;">
                                 Trạng thái:
-                                <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">@item.TrangThai</span>
+                                    @if (item.TrangThai == "Đang hoạt động")
+                                    {
+                                        <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">
+                                        @item.TrangThai
+                                        </span>
+                                    }
+                                    else
+                                    {
+                                         <span style="padding: 4px 12px; background-color: red; color: #fff; border-radius: 20px; font-size: 12px;">
+                                        @item.TrangThai
+                                        </span>
+                                    }
                                 <span style="font-size: 15px; display: block;  margin-top: 15px; font-weight: 500; color: #ff0000; ">
                                     Giá: @String.Format("{0:N0}", item.HocPhi) đ
                                 </span>
