--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutHocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutHocVien.cshtml
@@ -79,10 +79,13 @@
                         <a class="nav-link" href="/HocVien/TrangChu">Trang chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HocVien/LopHoc">Lớp học của tôi</a>
+                        <a class="nav-link" href="/HocVien/LopHocCuaToi">Lớp học của tôi</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/HocVien/ChiTietLichHoc">Lịch học</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HocVien/ThanhToan">Thanh toán</a>
                     </li>
 
                 </ul>
@@ -110,7 +113,7 @@
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <!-- User Information Display -->
                                 <li class="user-info d-flex align-items-center p-1">
-                                    <img src="~/Content/HocVien/Images/Default_Avatar.png" alt="User Avatar" class="rounded-circle me-3" width="40" height="40">
+                                    <img src="~/Content/HinhAnh/Avatar/Default_Avatar.png" alt="User Avatar" class="rounded-circle me-3" width="40" height="40">
                                     <div>
                                         <strong>@Session["UserName"]</strong> <!-- Hiển thị tên người dùng -->
                                         <p class="mb-0 text-muted" style="font-size: 0.85rem;">@Session["UserEmail"]</p> <!-- Hiển thị email -->
@@ -119,7 +122,6 @@
                                 <hr class="dropdown-divider">
                                 <!-- Dropdown Items -->
                                 <li><a class="dropdown-item" href="/HocVien/ThongTinNguoiDung">Tài khoản của tôi</a></li>
-                                <li><a class="dropdown-item" href="/HocVien/GioHang/">Giỏ hàng của tôi</a></li>
                                 <li><a class="dropdown-item" href="#">Cài đặt</a></li>
                                 <li><a class="dropdown-item" href="#">Nâng cấp</a></li>
                                 <li><a class="dropdown-item" href="#">Trung tâm hỗ trợ</a></li>
