--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
@@ -38,15 +38,12 @@
             <span style="color: #343a40">Danh sách khóa học</span>
         </div>
         <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách khóa học</h1>
-        <div class="mt-3">
-            <form method="get" action="/QuanTriVien/TimKiemKhoaHoc" class="input-group" style="width: 75%; position: relative;">
+        <form method="get" action="/QuanTriVien/TimKiemKhoaHoc" class="mt-3 input-group" style="width: 75%; position: relative;">
                 <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên khóa học...">
                 <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
                     <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
                 </button>
-            </form>
-        </div>
-
+        </form>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <div class="row g-4">
                 @foreach (var item in Model.DsKhoaHoc)
