--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachTaiLieu.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachTaiLieu.cshtml
@@ -1,7 +1,7 @@
-﻿@model QL_TrungTamAnhNgu.Models.PhongHocPagedList
+﻿@model QL_TrungTamAnhNgu.Models.TaiLieuPagedList
 @using QL_TrungTamAnhNgu.Models;
 @{
-    ViewBag.Title = "DanhSachPhongHoc";
+    ViewBag.Title = "DanhSachTaiLieu";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
@@ -36,33 +36,31 @@
         <div class="d-flex gap-2 mt-2">
             <i class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span>Danh sách phòng học</span>
+            <span>Danh sách tài liệu khóa học</span>
         </div>
-            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách phòng học</h1>
-            <form method="get" action="/QuanTriVien/TimKiemPhongHoc" class="mt-3 input-group" style="width: 75%; position: relative;">
-                <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên phòng...">
-                <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
-                    <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
-                </button>
-            </form>
+        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách tài liệu khóa học</h1>
+        <form method="get" action="/QuanTriVien/TimKiemTaiLieu" class="mt-2 input-group" style="width: 75%; position: relative;">
+            <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên tài liệu...">
+            <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
+                <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
+            </button>
+        </form>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 20px; padding: 16px; border: 1px solid #dadada; border-radius: 5px;">
             <div style="display:flex; border-bottom: 1px solid #dadada">
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã phòng</span>
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Tên phòng</span>
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Sức chứa</span>
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Vị trí</span>
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Trạng thái</span>
-                <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Thao tác</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã tài liệu</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Tên tài liệu</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">File upload</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Trạng thái</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Thao tác</span>
             </div>
             <div style="display: flex; flex-wrap: wrap; align-items: center;">
-                @foreach (var user in Model.DsPhongHoc)
+                @foreach (var user in Model.taiLieuList)
                 {
                     <div style="display: flex; width: 100%">
-                        <span class="col-md-2 item">@user.MaPhong</span>
-                        <span class="col-md-2 item">@user.TenPhong</span>
-                        <span class="col-md-2 item">@user.SucChua</span>
-                        <span class="col-md-2 item">@user.ViTri</span>
-                        <span class="col-md-2 item">
+                        <span style="flex: 1" class="item">@user.MaTaiLieu</span>
+                        <span style="flex: 1" class="item">@user.TenTaiLieu</span>
+                        <span style="flex: 1" class="item">@user.FileUpload</span>
+                        <span style="flex: 1" class="item">
                             @if (user.TrangThai == "Đang hoạt động")
                             {
                                 <span class="iconActive"
@@ -78,15 +76,10 @@
                                 </span>
                             }
                         </span>
-                        <span class="col-md-2 item">
-                            <a href="ChiTietPhongHoc?maPH=@user.MaPhong" style="width: 30px; height: 30px; background-color: #00bbf9; border-radius: 5px; display: flex; justify-content: center; align-items: center; ">
+                        <span style="flex: 1" class="item">
+                            <a href="ChiTietTaiLieu?maTL=@user.MaTaiLieu" style="width: 30px; height: 30px; background-color: #00bbf9; border-radius: 5px; display: flex; justify-content: center; align-items: center; ">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" style="height: 20px; width: 20px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-                                </svg>
-                            </a>
-                            <a href="XoaPhongHoc?maPH=@user.MaPhong" style="width: 30px; height: 30px; background-color: #ff0000; border-radius: 5px; display: flex; justify-content: center; align-items: center; ">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" style="height: 20px; width: 20px;">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                                 </svg>
                             </a>
                         </span>
@@ -94,7 +87,7 @@
                 }
             </div>
             <div class="mt-4 d-flex justify-content-center align-items-center gap-2">
-                <a href="@Url.Action("DanhSachPhongHoc", new { page = Model.CurrentPage - 1 })"
+                <a href="@Url.Action("DanhSachTaiLieu", new { page = Model.CurrentPage - 1 })"
                    class="btnNextPage @(Model.CurrentPage == 1 ? "disabled" : "")"
                    @(Model.CurrentPage == 1 ? "aria-disabled=\"true\"" : "")>
                     Trước
@@ -108,26 +101,15 @@
                         }
                         else
                         {
-                            <a class="btnPageItem" href="@Url.Action("DanhSachPhongHoc", new { page = i })">@i</a>
+                            <a class="btnPageItem" href="@Url.Action("DanhSachTaiLieu", new { page = i })">@i</a>
                         }
                     }
                 </div>
-                <a href="@Url.Action("DanhSachPhongHoc", new { page = Model.CurrentPage + 1 })"
+                <a href="@Url.Action("DanhSachTaiLieu", new { page = Model.CurrentPage + 1 })"
                    class="btnNextPage @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")"
                    @(Model.CurrentPage == Model.TotalPages ? "aria-disabled=\"true\"" : "")>
                     Sau
                 </a>
-            </div>
-
-            <div style="color: red;" class="mt-2">
-                <div>
-                    @if (TempData["ErrorMessagePhongHoc"] != null)
-                    {
-                        <div class="alert alert-danger">
-                            @TempData["ErrorMessagePhongHoc"]
-                        </div>
-                    }
-                </div>
             </div>
         </div>
     </div>
