--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemGiamGia.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemGiamGia.cshtml
@@ -1,19 +1,15 @@
-﻿@model QL_TrungTamAnhNgu.Models.KhoaHoc
+﻿@model QL_TrungTamAnhNgu.Models.GiamGia
 @using QL_TrungTamAnhNgu.Models
 @{
-    ViewBag.Title = "ThemKhoaHoc";
+    ViewBag.Title = "ThemGiamGia";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
-
-@{
-    NguoiDung user2 = Session["user"] as NguoiDung;
-}
 <div>
     <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
         <div style="display: flex; align-items: center; column-gap: 8px;">
             <i class="fa-solid fa-bars" style="color: black; font-size: 20px;"></i>
-            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý người dùng</h2>
+            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý Trung tâm Anh ngữ Yola</h2>
         </div>
         <div style="position: relative">
             <button onclick="handleClickUser(event)" style="display: flex; align-items: center; column-gap: 4px; color: #000">
@@ -40,53 +36,59 @@
         <div class="d-flex gap-2 mt-2">
             <i style="color: #343a40" class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #343a40">Danh sách khóa học</span>
+            <span style="color: #343a40">Danh sách mã giảm giá khóa học</span>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #000; ">Thêm khóa học</span>
+            <span style="color: #000; ">Thêm mã giảm giá</span>
         </div>
-        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm khóa học</h1>
+        <div class="d-flex justify-content-between">
+            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm giảm giá khóa học</h1>
+            @if (TempData["ErrorMessageTaiLieu"] != null)
+            {
+                <div class="alert alert-danger">
+                    @TempData["ErrorMessageTaiLieu"]
+                </div>
+            }
+        </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ThemKhoaHoc" method="post">
+            <form class="myForm" action="/QuanTriVien/ThemGiamGia" method="post">
                 <div style="width: 100%;">
-                    <div class="d-flex justify-content-between gap-4">
+                    <div class="mt-2 d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenKhoaHoc">Tên khóa học: </label>
-                            @Html.TextBoxFor(model => model.TenKhoaHoc, new { @id = "TenKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
-                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenGiamGia">Tên giảm giá: </label>
+                            @Html.TextBoxFor(model => model.TenGiamGia, new { @id = "TenGiamGia", @class = "form-control mt-2", placeholder = "Nhập tên giảm giá" })
+                        </div>
+                        <div style="width: 100%">
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TiLeGiam">Tỉ lệ giảm (%): </label>
+                            @Html.TextBoxFor(model => model.TiLeGiam, new { @id = "TiLeGiam", @class = "form-control mt-2", placeholder = "Nhập tỉ lệ giảm" })
                         </div>
                     </div>
-                    <div style="width: 100%">
+                    <div style="margin-top: 15px; width: 100%">
                         <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MoTa">Mô tả: </label>
                         @Html.TextBoxFor(model => model.MoTa, new { @id = "MoTa", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
-                        <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                     </div>
-                    <div class="d-flex justify-content-between gap-4">
+                    <div class="mt-4 d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="HocPhi">Học phí: (VNĐ)</label>
-                            @Html.TextBoxFor(model => model.HocPhi, new { @id = "HocPhi", @class = "form-control mt-2", placeholder = "Nhập học phí" })
-                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between gap-4">
-                        <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NguoiTao">Người tạo: </label>
-                            <input type="text" name="NguoiTao" id="NguoiTao" value="@user2.MaNguoiDung" class="form-control mt-2" readonly />
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NgayTao">Ngày bắt đầu: </label>
+                            @Html.TextBoxFor(model => model.NgayBatDau, new
+                                  {
+                                      @type = "date",
+                                      @id = "NgayBatDau",
+                                      @class = "form-control mt-2",
+                                      Value = Model.NgayBatDau.ToString("yyyy-MM-dd") 
+                                  })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="CapDo">Cấp độ: </label>
-                            @Html.TextBoxFor(model => model.CapDo, new { @id = "CapDo", @class = "form-control mt-2", placeholder = "Nhập cấp độ" })
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NgayTao">Ngày kết thúc: </label>
+                            @Html.TextBoxFor(model => model.NgayKetThuc, new
+                                  {
+                                      @type = "date",
+                                      @id = "NgayKetThuc",
+                                      @class = "form-control mt-2",
+                                      Value = Model.NgayKetThuc.ToString("yyyy-MM-dd") 
+                                  })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
-                    </div>
-                    <div class="mt-3 d-flex justify-content-center flex-column">
-                        <span style="font-size: 15px; color: #374151; font-weight: 500; display: block; margin-top: 10px; margin-bottom: 5px;">Ảnh bìa khóa học</span>
-                        <img id="avatarPreview" src="~/Content/HinhAnh/KhoaHoc/khoahoc_default.jpg" alt="avatar preview" style="width: 450px; object-fit: cover; height: 250px;" />
-                        @Html.TextBoxFor(model => model.AnhBia, new { @id = "Avatar", @value = @Model.AnhBia, @class = "mt-2", @style = "display: none;", @type = "file", @accept = "image/*" })
-                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
-                            Chọn tập tin
-                        </label>
-                        <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errAvatar"></span>
                     </div>
                 </div>
                 <div>
